[gd_scene load_steps=28 format=3 uid="uid://btoadxo20jn4"]

[ext_resource type="Script" path="res://scenes/run/run.gd" id="1_y8ss3"]
[ext_resource type="Resource" uid="uid://db6tb870t0lae" path="res://scenes/run/run_init_data.tres" id="2_evlyb"]
[ext_resource type="PackedScene" uid="uid://bi6nnwqbl0qqo" path="res://scenes/map/map.tscn" id="2_rq6d4"]
[ext_resource type="PackedScene" uid="uid://bcdmoid8212ip" path="res://scenes/ui/card_pile_opener.tscn" id="2_ua7jt"]
[ext_resource type="PackedScene" uid="uid://dws7irhbqmomu" path="res://scenes/ui/card_pile_view.tscn" id="4_56bxr"]
[ext_resource type="PackedScene" uid="uid://6uus0vr6amco" path="res://scenes/ui/gold_ui.tscn" id="5_ybtdt"]
[ext_resource type="PackedScene" uid="uid://bgv2atk5gusnu" path="res://scenes/ui/health_ui.tscn" id="6_7uaii"]
[ext_resource type="Texture2D" uid="uid://dkoe7qa5bt4v1" path="res://art/BacklogIcon.png" id="8_i7wnt"]
[ext_resource type="PackedScene" uid="uid://dc62dcaeqb631" path="res://scenes/relic_handler/relic_handler.tscn" id="8_knud8"]
[ext_resource type="PackedScene" uid="uid://8f3j8enkvdko" path="res://scenes/relic_handler/relic_tooltip.tscn" id="9_34cmp"]
[ext_resource type="Script" path="res://scenes/run/pause_menu.gd" id="10_gnqne"]
[ext_resource type="Script" path="res://scenes/run/SprintScreen.gd" id="12_pxqhw"]
[ext_resource type="Texture2D" uid="uid://b2jpxne7cxd0g" path="res://art/Sprint 0.png" id="13_2ngfr"]
[ext_resource type="Texture2D" uid="uid://ck1mheduuo7j7" path="res://art/Sprint 1.png" id="14_260u0"]
[ext_resource type="Texture2D" uid="uid://ca32c2oirpnh0" path="res://art/programv3.png" id="14_odq15"]
[ext_resource type="Texture2D" uid="uid://2rcjv8c0dbr5" path="res://art/Sprint 2.png" id="15_l4rco"]
[ext_resource type="Texture2D" uid="uid://cwbjrbcfkp530" path="res://art/pconly.png" id="15_tl7s0"]
[ext_resource type="Texture2D" uid="uid://uk2ho380vo11" path="res://art/Sprint 3.png" id="16_j2iwe"]
[ext_resource type="Texture2D" uid="uid://jsv6duy2qt7d" path="res://art/windowstaskbar.png" id="16_kmvny"]
[ext_resource type="Texture2D" uid="uid://bbc8053gbc8hl" path="res://art/Whole Desk.png" id="16_ny2h0"]
[ext_resource type="Texture2D" uid="uid://dtrg3d53dye4u" path="res://art/whiteboard4.png" id="17_c3bh4"]
[ext_resource type="Texture2D" uid="uid://be88jm8fdl0sl" path="res://art/Sprint 4.png" id="17_oyhrn"]
[ext_resource type="Texture2D" uid="uid://3f8r5078tpda" path="res://art/Sprint 5.png" id="18_sares"]
[ext_resource type="Texture2D" uid="uid://cgxjcscch8j2a" path="res://art/Sprint 6.png" id="19_ckq4x"]

[sub_resource type="Gradient" id="Gradient_lhw2h"]
colors = PackedColorArray(0.215902, 0.215902, 0.215902, 1, 0.4, 0.220333, 0.204, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3hdle"]
gradient = SubResource("Gradient_lhw2h")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_8x4vt"]

[node name="Run" type="Node"]
script = ExtResource("1_y8ss3")
run_init_data = ExtResource("2_evlyb")

[node name="Map" parent="." instance=ExtResource("2_rq6d4")]
position = Vector2(-3, -107)

[node name="MapBackgroundLayer" type="CanvasLayer" parent="Map"]
layer = -1

[node name="MapBackground" type="TextureRect" parent="Map/MapBackgroundLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_3hdle")

[node name="CurrentView" type="Node" parent="."]

[node name="TopBar" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 3

[node name="Background" type="ColorRect" parent="TopBar"]
custom_minimum_size = Vector2(0, 15)
anchors_preset = 10
anchor_right = 1.0
offset_left = 151.0
offset_top = 98.0
offset_right = -13.0
offset_bottom = 115.0
grow_horizontal = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.45098)

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
custom_minimum_size = Vector2(0, 16)
anchors_preset = 10
anchor_right = 1.0
offset_left = 155.0
offset_top = 98.0
offset_right = -11.0
offset_bottom = 114.0
grow_horizontal = 2

[node name="Stats" type="HBoxContainer" parent="TopBar/HBoxContainer"]
layout_mode = 2

[node name="HealthUI" parent="TopBar/HBoxContainer/Stats" instance=ExtResource("6_7uaii")]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
show_max_hp = true

[node name="GoldUI" parent="TopBar/HBoxContainer/Stats" instance=ExtResource("5_ybtdt")]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="RelicHandler" parent="TopBar/HBoxContainer/HBoxContainer" instance=ExtResource("8_knud8")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="DeckButton" parent="TopBar/HBoxContainer" node_paths=PackedStringArray("counter") instance=ExtResource("2_ua7jt")]
unique_name_in_owner = true
layout_mode = 2
counter = NodePath("Label")

[node name="TextureRect" type="TextureRect" parent="TopBar/HBoxContainer/DeckButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_right = 3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_i7wnt")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="TopBar/HBoxContainer/DeckButton"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -10.0
offset_bottom = -2.0
grow_vertical = 0
text = "99"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DeckView" parent="TopBar" instance=ExtResource("4_56bxr")]
unique_name_in_owner = true
visible = false

[node name="RelicTooltip" parent="TopBar" instance=ExtResource("9_34cmp")]
unique_name_in_owner = true
visible = false

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
layer = 5
visible = false
script = ExtResource("10_gnqne")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.705882)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_8x4vt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="BackToGameButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 14)
layout_mode = 2
text = "Back"

[node name="SaveAndQuitButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Main Menu"

[node name="Sprint" type="CanvasLayer" parent="."]
layer = 5
visible = false
script = ExtResource("12_pxqhw")

[node name="ColorRect" type="ColorRect" parent="Sprint"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.721569)

[node name="VBoxContainer" type="VBoxContainer" parent="Sprint"]
custom_minimum_size = Vector2(150, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 19.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Sprint0" type="ScrollContainer" parent="Sprint/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(114, 95)
layout_mode = 2

[node name="Control" type="Control" parent="Sprint/VBoxContainer/Sprint0"]
clip_contents = true
custom_minimum_size = Vector2(114, 130)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Sprint0" type="Sprite2D" parent="Sprint/VBoxContainer/Sprint0/Control"]
position = Vector2(113, 57)
scale = Vector2(0.068209, 0.0601436)
texture = ExtResource("13_2ngfr")

[node name="Sprint1" type="ScrollContainer" parent="Sprint/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(114, 95)
layout_mode = 2

[node name="Control" type="Control" parent="Sprint/VBoxContainer/Sprint1"]
clip_contents = true
custom_minimum_size = Vector2(114, 160)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Sprint1" type="Sprite2D" parent="Sprint/VBoxContainer/Sprint1/Control"]
position = Vector2(115, 69)
scale = Vector2(0.068209, 0.0601436)
texture = ExtResource("14_260u0")

[node name="Sprint2" type="ScrollContainer" parent="Sprint/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(114, 95)
layout_mode = 2

[node name="Control" type="Control" parent="Sprint/VBoxContainer/Sprint2"]
clip_contents = true
custom_minimum_size = Vector2(114, 231)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Sprint1" type="Sprite2D" parent="Sprint/VBoxContainer/Sprint2/Control"]
position = Vector2(112, 119)
scale = Vector2(0.068209, 0.0601436)
texture = ExtResource("15_l4rco")

[node name="Sprint3" type="ScrollContainer" parent="Sprint/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(114, 95)
layout_mode = 2

[node name="Control" type="Control" parent="Sprint/VBoxContainer/Sprint3"]
clip_contents = true
custom_minimum_size = Vector2(114, 190)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Sprint3" type="Sprite2D" parent="Sprint/VBoxContainer/Sprint3/Control"]
position = Vector2(116, 87)
scale = Vector2(0.068209, 0.0601436)
texture = ExtResource("16_j2iwe")

[node name="Sprint4" type="ScrollContainer" parent="Sprint/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(114, 95)
layout_mode = 2

[node name="Control" type="Control" parent="Sprint/VBoxContainer/Sprint4"]
clip_contents = true
custom_minimum_size = Vector2(114, 210)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Sprint4" type="Sprite2D" parent="Sprint/VBoxContainer/Sprint4/Control"]
position = Vector2(114, 98.5)
scale = Vector2(0.0674627, 0.0567113)
texture = ExtResource("17_oyhrn")

[node name="Sprint5" type="ScrollContainer" parent="Sprint/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(114, 95)
layout_mode = 2

[node name="Control" type="Control" parent="Sprint/VBoxContainer/Sprint5"]
clip_contents = true
custom_minimum_size = Vector2(114, 145)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Sprint5" type="Sprite2D" parent="Sprint/VBoxContainer/Sprint5/Control"]
position = Vector2(115, 66)
scale = Vector2(0.0674627, 0.0567113)
texture = ExtResource("18_sares")

[node name="Sprint6" type="ScrollContainer" parent="Sprint/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(114, 95)
layout_mode = 2

[node name="Control" type="Control" parent="Sprint/VBoxContainer/Sprint6"]
clip_contents = true
custom_minimum_size = Vector2(114, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Sprint6" type="Sprite2D" parent="Sprint/VBoxContainer/Sprint6/Control"]
position = Vector2(115, 79)
scale = Vector2(0.0674627, 0.0567113)
texture = ExtResource("19_ckq4x")

[node name="SprintTitle" type="RichTextLabel" parent="Sprint/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
text = "asd"
fit_content = true
scroll_active = false

[node name="SprintText" type="RichTextLabel" parent="Sprint/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 5
text = "asdasd"
fit_content = true
tab_size = 1
context_menu_enabled = true

[node name="BackToGame" type="Button" parent="Sprint"]
unique_name_in_owner = true
offset_left = 175.0
offset_top = 21.0
offset_right = 231.0
offset_bottom = 29.0
text = "Zum Sprint..."

[node name="BackgroundImage" type="CanvasLayer" parent="."]

[node name="Programm" type="Sprite2D" parent="BackgroundImage"]
self_modulate = Color(1, 1, 1, 0.666667)
position = Vector2(129.5, 64)
scale = Vector2(0.917969, 0.736111)
texture = ExtResource("14_odq15")

[node name="Computerbackground" type="Sprite2D" parent="BackgroundImage"]
position = Vector2(131, 90)
scale = Vector2(0.380698, 0.3384)
texture = ExtResource("15_tl7s0")

[node name="Windowstaskbar" type="Sprite2D" parent="BackgroundImage"]
position = Vector2(129.5, 119.5)
scale = Vector2(0.141555, 0.111111)
texture = ExtResource("16_kmvny")

[node name="WholeDesk" type="Sprite2D" parent="BackgroundImage"]
visible = false
position = Vector2(132.25, 90)
scale = Vector2(0.2675, 0.336)
texture = ExtResource("16_ny2h0")

[node name="Windowstaskbar" type="Sprite2D" parent="BackgroundImage/WholeDesk"]
visible = false
self_modulate = Color(1, 1, 1, 0.592157)
position = Vector2(-152.941, 90.9675)
scale = Vector2(0.231101, 0.237823)
texture = ExtResource("16_kmvny")

[node name="Whiteboard4" type="Sprite2D" parent="BackgroundImage"]
visible = false
position = Vector2(127, 75)
scale = Vector2(0.432546, 0.325167)
texture = ExtResource("17_c3bh4")

[node name="ReturnToDesk" type="Button" parent="BackgroundImage"]
unique_name_in_owner = true
top_level = true
offset_left = 10.0
offset_top = 114.0
offset_right = 42.0
offset_bottom = 124.0

[connection signal="pressed" from="BackgroundImage/ReturnToDesk" to="." method="_on_return_to_desk_pressed"]
